#4731# Steel theme layout issue on lower resolutions

--- a/plugins/themes/steel/steel.css
+++ b/plugins/themes/steel/steel.css
@@ -61,7 +61,6 @@ input.defaultButton {
 
 #main {
 	padding-left: 5px;
-	padding-right: 4px;
 	background-color: #f9f9f9;
 	border-left: 1px solid black;
 	border-right: 1px solid black;
